# high_web_traffic_recipe

./: .gitignore  README.md  notebook.html  notebook.ipynb  pyproject.toml
model_development/: __init__.py  model_classes.py
model_evaluation/: __init__.py  model_evaluator.py
tests/: __init__.py  test_project.py
utils/: __init__.py  utilities.py
validation/: __init__.py  data_validator.py  statistical_analyzer.py
visualization/: __init__.py  data_visualizer.py
